# green-mbpt

./: .clang-format  .gitignore  CMakeLists.txt  GREEN_RELEASE.txt  LICENSE  README.md  embedding.cpp  geintegrals_test.cpp  itransform.cpp  main.cpp  mpi_read_lock.cpp  sim.h5
.github/: codecov.yml
.github/workflows/: green_tag.yaml  test.yaml  test_macos.yaml
cmake/: AddGreenKernel.cmake  GreenDeps.cmake
include/: access_counter.hpp  age_out_buffer.hpp  buffer.hpp  chunk_reader.hpp  reader.hpp  shared_memory_region.hpp
python/: common_utils.py  inchworm_utils.py  init_data_df.py  init_data_df_X2C.py  init_data_df_mol_X2C.py  init_data_mol_df.py  init_seet.py  integral_utils.py  migrate.py  plot_bands.py  requirements.txt  submit_seet_inchworm_loop.py
python/GDF_S_metric/: GDF_S_metric.py  init_AqQ.py  init_int_S.py
python/GDF_S_metric/test/: test_Aq.py  test_Aq_rsgdf.py  test_GDF_S_metric.py  test_GDF_S_metric_outcore.py  test_RSGDF_S_metric_outcore.py  test_make_j3c_S.py
python/pyManyBody/: GDF_S_metric.py  RSGDF_make_j3c_S.py  __init__.py  common_utils.py  init_AqQ.py  integral_utils.py  pyscf_init.py
src/: CMakeLists.txt  buffer.cpp  chunk_reader.cpp  common_utils.cpp  dyson.cpp  gf2_solver.cpp  gf2_solver_t_ewald_correction.cpp  gw_cpu_kernel.cpp  gw_cpu_kernels.cpp  gw_solver.cpp  gw_solver_prec.cpp  hf_cpu_kernels.cpp  hf_solver.cpp  mbpt_q0_utils_t.cpp  reader.cpp  seet_solver.cpp  transform.cpp
src/green/embedding/: embedding_defs.h  embedding_run.h  seet_solver.h
src/green/mbpt/: common_defs.h  common_utils.h  custom_kernels.h  df_buffered_reader.h  df_integral_t.h  df_legacy_reader.h  dyson.h  except.h  gf2_solver.h  gw_solver.h  hf_solver.h  kernel_factory.h  kernels.h  kinter.h  mbpt_q0_utils_t.h  mbpt_run.h  orth.h  seet_solver.h
src/green/mbpt/buffered_reader/: age_out_buffer.hpp  buffer.hpp  chunk_reader.hpp
src/green/transform/: transform.h
test/: CMakeLists.txt  decomp_test.cpp  solvers_test.cpp  tensor_test.h  test_access_counter.cpp  test_age_out_buffer.cpp  test_buffer.cpp  test_bufferedSI.cpp  test_chunk_reader.cpp  test_hash.cpp  test_main.cpp  test_mpi.cpp  test_shared_memory_region.cpp
test/data/Dyson/: input.h5
test/data/GF2/: data.h5  data_e.h5  input.h5  input_e.h5
test/data/GF2/df_hf_int/: VQ_0.h5  meta.h5
test/data/GF2/df_hf_int_e/: VQ_0.h5  df_ewald.h5  meta.h5
test/data/GF2/df_hf_int_z/: df_ewald.h5  meta.h5
test/data/GW/: data.h5  data_c.h5  input.h5  input_tr_symm.h5
test/data/GW/df_hf_int/: AqQ.h5  VQ_0.h5  meta.h5
test/data/GW_X2C/: data.h5  input.h5
test/data/GW_X2C/df_hf_int/: VQ_0.h5  meta.h5
test/data/GW_X2C_Ar/: data_full_symm.h5  init.sh  input_full_symm.h5  input_no_symm.h5  input_trs_only.h5  make_g_input.sh
test/data/GW_X2C_Ar/df_hf_int/: VQ_0.h5  meta.h5
test/data/GW_X2C_Hubbard/: input_no_symm.h5  input_symm.h5  input_trs_only.h5  sim_no_symm.h5  sim_symm.h5  sim_trs_only.h5
test/data/GW_X2C_Hubbard/df_hf_int/: VQ_0.h5
test/data/GW_X2C_Hubbard/df_int/: meta.h5
test/data/HF/: data.h5  input.h5
test/data/HF/df_hf_int/: VQ_0.h5  meta.h5
test/data/HF/df_int/: VQ_0.h5  meta.h5
test/data/HF_X2C/: data.h5  input.h5
test/data/HF_X2C/df_hf_int/: meta.h5
test/data/HF_orth_invariance/: generate.py
test/data/HF_orth_invariance/lowdin/: data.h5  input.h5
test/data/HF_orth_invariance/lowdin/df_hf_int/: VQ_0.h5
test/data/HF_orth_invariance/mo/: data.h5  input.h5
test/data/HF_orth_invariance/mo/df_hf_int/: VQ_0.h5
test/data/HF_orth_invariance/natural/: data.h5  input.h5
test/data/HF_orth_invariance/natural/df_hf_int/: VQ_0.h5
test/data/HF_orth_invariance/none/: data.h5  input.h5
test/data/HF_orth_invariance/none/df_hf_int/: VQ_0.h5  meta.h5
test/data/Input/: input.h5
test/data/Input/df_int/: VQ_0.h5
test/data/Input/df_int_0.3.0/: VQ_0.h5  meta.h5
test/data/Input/df_int_1.0.0/: VQ_0.h5  meta.h5
test/data/Input/df_int_1.1.0/: meta.h5
test/data/Input/df_int_x/: meta.h5
test/data/Input/df_int_y/: meta.h5
test/data/embedding/: data.h5  dc.h5
test/data/embedding/dc_int.0/: VQ_0.h5  dummy.h5  meta.h5
test/data/embedding/dc_int_gfmol_test.0/: VQ_0.h5  dummy.h5  meta.h5
